# emmett-mongorest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
emmett_mongorest/: __init__.py  docs.py  ext.py  helpers.py  parsers.py  rest.py  serializers.py  wrappers.py
emmett_mongorest/assets/public/: api-docs.min.js  code-block.min.js  main.min.css  multi-code-sample.min.js  request-code-block.min.js
emmett_mongorest/assets/templates/: _req_sample.html  errors.html  filtering.html  introduction.html  markdown.html  module.html  pagination.html
emmett_mongorest/assets/templates/code_samples/delete/: curl.html  python.html
emmett_mongorest/assets/templates/code_samples/get/: curl.html  python.html
emmett_mongorest/assets/templates/code_samples/post/: curl.html  python.html
emmett_mongorest/assets/templates/code_samples/put/: curl.html  python.html
emmett_mongorest/queries/: __init__.py  helpers.py  parser.py  validation.py
emmett_mongorest/templates/: docs.html
front/: package-lock.json  package.json  tailwind.config.js  vue.config.js
front/src/components/: ApiDocs.vue  CodeBlock.vue  MultiCodeSample.vue  RequestCodeBlock.vue  SideMenu.vue
tests/: conftest.py  test_endpoints.py  test_endpoints_additional.py  test_queries.py
