[tool.poetry]
name = "Emmett-MongoREST"
version = "0.1.0.dev0"
description = "MongoDB REST extension for Emmett framework"
authors = ["Giovanni Barillari <gi0baro@d4net.org>"]
license = "BSD-3-Clause"

readme = "README.md"
homepage = "https://github.com/gi0baro/emmett-mongorest"
repository = "https://github.com/gi0baro/emmett-mongorest"

keywords = ["mongodb", "rest", "web", "emmett"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    {include = "emmett_mongorest"},
    {include = "tests", format = "sdist"}
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
emmett = { git = "https://github.com/emmett-framework/emmett.git", rev = "0a7bedc", allow-prereleases = true }
emmett_mongo = { git = "https://github.com/gi0baro/emmett-mongo.git", rev = "05ac005", allow-prereleases = true }
emmett_rest = { git = "https://github.com/emmett-framework/rest.git", rev = "a6701fc", allow-prereleases = true }
pydantic = "1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10"
pylint = "^2.4.4"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/gi0baro/emmett-mongorest/issues"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
